[tool.poetry]
name = "moast"
version = "0.1.0"
description = "Moon on a Stick Tools"
authors = ["Lee Braiden <lee.braiden@pm.me>"]
license = "AGPL v3"
readme = "README.md"
packages = [
  { from="src", include="moast" },
]

[tool.poetry.scripts]
moast = "moast.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
astropy = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
